syntax = "proto3";
import "BasicTypes.proto";
import "DtoTypes.proto";

option csharp_namespace = "TestLevelSetAssignmentService";

package TestLevelSetAssignments;

service TestLevelSetAssignments {
	rpc RemoveTestLevelSetAssignmentFor(ListOfLocationToolAssignmentIdsAndTestTypes) returns (NoParams);
	rpc AssignTestLevelSetToLocationToolAssignments(AssignTestLevelSetToLocationToolAssignmentsParameter) returns (NoParams);
	rpc AssignTestLevelSetToProcessControlConditions(AssignTestLevelSetToProcessControlConditionsParameter) returns (NoParams);
	rpc RemoveTestLevelSetAssignmentForProcessControl(RemoveTestLevelSetAssignmentForProcessControlParameter) returns (NoParams);
}


message LocationToolAssignmentIdAndTestType {
	int64 locationToolAssignmentId = 1;
	int32 testType = 2;
}

message ListOfLocationToolAssignmentIdsAndTestTypes {
	repeated LocationToolAssignmentIdAndTestType values = 1;
	int64 userId = 2;
}

message AssignTestLevelSetToLocationToolAssignmentsParameter {
	int64 testLevelSetId = 1;
	ListOfLocationToolAssignmentIdsAndTestTypes locationToolAssignmentIdsAndTestTypes = 2;
	int64 userId = 3;
}

message AssignTestLevelSetToProcessControlConditionsParameter {
	int64 testLevelSetId = 1;
	repeated int64 processControlConditionIds = 2;
	int64 userId = 3;
}

message RemoveTestLevelSetAssignmentForProcessControlParameter {
	repeated int64 processControlConditionIds = 1;
	int64 userId = 2;
}